--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
 		<script src="js/settings.js"></script>
 		<script src="js/editor.js"></script>
 		<script src="js/preview.js"></script>
+		<script src="js/share.js"></script>
 	</head>
 	<body class="light">
 
@@ -56,8 +57,8 @@
 
 		<section class="active" data-view="login">
 			<div class="middle padded-2">
-				<form method="post" data-form="login" class="vertical align-center padded-1">
-					<h1>Log In</h1>
+				<h1>Log In</h1>
+				<form method="post" data-form="login" class="vertical align-center padded-2">
 					<p>Welcome! Please login to get started.</p>
 					<p>If you don't have an account yet, register at https://skrifa.xyz</p>
 					<label>User Name:</label>
@@ -72,8 +73,9 @@
 
 		<section data-view="key">
 			<div class="middle padded-2">
-				<form method="post" data-form="key" class="vertical align-center padded-1">
-					<h1>Create your new Key Pair</h1>
+				<h1>Create your new Key Pair</h1>
+				<form method="post" data-form="key" class="vertical align-center padded-2">
+
 					<p>A new Key Pair will be created with the passphrase you provide.</p>
 					<label>Encryption Passphrase:</label>
 					<input type="password" name="passphrase" required="true">
@@ -87,8 +89,8 @@
 
 		<section data-view="decrypt">
 			<div class="middle padded-2">
-				<form method="post" data-form="decrypt" class="vertical align-center padded-1">
-					<h1>Decrypt Your Notes</h1>
+				<h1>Decrypt Your Notes</h1>
+				<form method="post" data-form="decrypt" class="vertical align-center padded-2">
 					<p>Enter your passphrase to decrypt your notes</p>
 					<label>Encryption Passphrase:</label>
 					<input type="password" placeholder="Passphrase" name="passphrase" required="true">
@@ -123,7 +125,7 @@
 
 			<div data-modal="insert-snippet" data-insert-element="Video">
 				<form data-form="insert-snippet" class="vertical align-center padded-1">
-					<h2>Select a Language</h2>
+					<label>Select a Language</label>
 					<select name="language"></select>
 					<div class="buttons">
 						<button type="submit">Ok</button>
@@ -251,11 +253,26 @@
 			<div contenteditable="true" id="editor"></div>
 		</section>
 
+		<section data-view="share">
+			<div class="middle padded-2">
+				<h1>Share</h1>
+				<form data-form="share" class="vertical padded-2">
+					<label>User Name of who you want to share it to.</label>
+					<input type='text' name="username" placeholder="Username" required="true">
+					<div class="buttons">
+						<button type="submit">Share</button>
+						<button type="reset">Cancel</button>
+					</div>
+				</form>
+			</div>
+		</section>
+
 		<section data-view="preview">
 			<nav class="top-nav">
 				<ul>
 					<li data-action="back"><span class="fa fa-arrow-left"></span> Back</li>
 					<li data-action="export"><span class="fa fa-download"></span> Export</li>
+					<li data-action="share"><span class="fa fa-share"></span> Share</li>
 					<li data-action="print"><span class="fa fa-print"></span> Print</li>
 					<li data-action="edit"><span class='fa-pencil fa'></span> Edit</li>
 				</ul>
@@ -264,63 +281,71 @@
 		</section>
 
 		<section data-view="new-notebook">
-			<form method="post" data-form="new-notebook" class="vertical align-center middle">
+			<div class="middle padded-2">
 				<h1>New Notebook</h1>
-				<label>Name:</label>
-				<input type="text" placeholder="Notebook's name" data-input="name" required="true">
-				<label>Description:</label>
-				<input type="text" placeholder="What this notebook is for" data-input="description">
-				<div class="buttons">
-					<button type="submit">Ok</button>
-					<button type="reset">Cancel</button>
-				</div>
-			</form>
+				<form method="post" data-form="new-notebook" class="vertical align-center padded-2">
+
+					<label>Name:</label>
+					<input type="text" placeholder="Notebook's name" data-input="name" required="true">
+					<label>Description:</label>
+					<input type="text" placeholder="What this notebook is for" data-input="description">
+					<div class="buttons">
+						<button type="submit">Ok</button>
+						<button type="reset">Cancel</button>
+					</div>
+				</form>
+			</div>
 		</section>
 
 		<section data-view="edit-notebook">
-			<form method="post" data-form="edit-notebook" class="vertical align-center middle">
+			<div class="middle padded-2">
 				<h1>Edit Notebook</h1>
-				<label>Name:</label>
-				<input type="text" placeholder="Notebook's name" data-input="name" required="true">
-				<label>Description:</label>
-				<input type="text" placeholder="What this notebook is for" data-input="description">
-				<div class="buttons">
-					<button type="submit">Save</button>
-					<button type="reset">Cancel</button>
-				</div>
-			</form>
+				<form method="post" data-form="edit-notebook" class="vertical align-center padded-2">
+					<label>Name:</label>
+					<input type="text" placeholder="Notebook's name" data-input="name" required="true">
+					<label>Description:</label>
+					<input type="text" placeholder="What this notebook is for" data-input="description">
+					<div class="buttons">
+						<button type="submit">Save</button>
+						<button type="reset">Cancel</button>
+					</div>
+				</form>
+
 		</section>
 
 		<section data-view="delete-notebook">
-			<form method="post" data-form="delete-notebook" class="vertical align-center middle">
+			<div class="middle padded-2">
 				<h1>Delete Notebook</h1>
-				<p>What should happen to the notes currently inside this notebook?</p>
-				<p><input type='radio' name='strategy' value="move" required="true"> Move Notes to Inbox</p>
-				<p><input type='radio' name='strategy' value="delete" required="true"> Delete Everything</p>
-				<div class="buttons">
-					<button type="submit">Delete</button>
-					<button type="reset">Cancel</button>
-				</div>
-			</form>
+				<form method="post" data-form="delete-notebook" class="vertical align-center padded-2">
+					<p>What should happen to the notes currently inside this notebook?</p>
+					<p><input type='radio' name='strategy' value="move" required="true"> Move Notes to Inbox</p>
+					<p><input type='radio' name='strategy' value="delete" required="true"> Delete Everything</p>
+					<div class="buttons">
+						<button type="submit">Delete</button>
+						<button type="reset">Cancel</button>
+					</div>
+				</form>
+			</div>
 		</section>
 
 		<section data-view="export-note">
-
-			<form method="post" data-form="export-note" class="vertical align-center middle">
+			<div class="middle padded-2">
 				<h1>Export Note As:</h1>
-				<p>Remember that only the Skrifa Note format will remain encrypted, by exporting your note to any other format your content can be viewed by anyone.</p>
-				<p><input type="radio" name="format" value='skf' required="true"> <label>Skrifa Note</label></p>
-				<p><input type="radio" name="format" value='pdf' required="true"> <label>PDF Document</label></p>
-				<p><input type="radio" name="format" value='md' required="true"> <label>Markdown Note</label></p>
-				<!--
-				<input type="radio" name="format" value='html' required="true"> <label>HTML Document</label>
-				-->
+				<form method="post" data-form="export-note" class="vertical align-center padded-2">
+					<p>Remember that only the Skrifa Note format will remain encrypted, by exporting your note to any other format your content can be viewed by anyone.</p>
+					<p><input type="radio" name="format" value='skf' required="true"> <label>Skrifa Note</label></p>
+					<p><input type="radio" name="format" value='pdf' required="true"> <label>PDF Document</label></p>
+					<p><input type="radio" name="format" value='md' required="true"> <label>Markdown Note</label></p>
+					<!--
+					<input type="radio" name="format" value='html' required="true"> <label>HTML Document</label>
+					-->
 
-				<div class="buttons">
-					<button type="submit">Export</button>
-					<button type="reset">Cancel</button>
-				</div>
-			</form>
+					<div class="buttons">
+						<button type="submit">Export</button>
+						<button type="reset">Cancel</button>
+					</div>
+				</form>
+			</div>
 		</section>
 
 		<section data-view="notes">
@@ -372,17 +397,26 @@
 
 		<section data-view="settings">
 			<div class="middle padded-1">
+				<h1>Settings</h1>
 				<!--<div class="vertical align-center">
 					<h2>Sync</h2>
 					<button data-action="sync-local">Restore from Sync</button>
 					<button data-action="sync-server">Sync to Server</button>
 				</div>-->
-				<div class="vertical align-center">
-					<h2>Backup</h2>
-					<button data-action="import-backup">Import Backup</button>
-					<button data-action="create-backup">Create Backup</button>
-				</div>
-				<form method="post" data-form="settings" class="vertical align-center">
+
+				<form method="post" data-form="settings" class="vertical align-center padded-2">
+					<div class="vertical align-center">
+						<h2>Theme</h2>
+						<select data-action='change-theme'>
+							<option value="light">Light</option>
+							<option value="dark">Dark</option>
+						</select>
+					</div>
+					<div class="vertical align-center">
+						<h2>Backup</h2>
+						<button data-action="import-backup">Import Backup</button>
+						<button data-action="create-backup">Create Backup</button>
+					</div>
 					<div class="buttons">
 						<button type="submit">Ok</button>
 						<button type="reset">Cancel</button>
