Add new version check

--- a/app/index.html
+++ b/app/index.html
@@ -379,6 +379,7 @@
 						<li data-action="edit-notebook" class="vertical"><span class="fa fa-pencil"></span><small>Edit Notebook</small></li>
 						<li data-action="delete-notebook" class="vertical"><span class="fa fa-trash"></span><small>Delete Notebook</small></li>
 						<li data-action="settings" class="vertical"><span class="fa fa-cog"></span><small>Settings</small></li>
+						<li data-action="update" class="vertical"><span class="fa fa-cloud-download"></span><small>New Version Available</small></li>
 
 				        <!--<li class="fa fa-moon-o" data-action=""></li>
 				        <li class="fa fa-question-circle" data-show="help"></li>
