Fix share error

--- a/app/index.html
+++ b/app/index.html
@@ -256,7 +256,7 @@
 		<section data-view="share">
 			<div class="middle padded-2">
 				<h1>Share</h1>
-				<form data-form="share" class="vertical padded-2">
+				<form data-form="share" class="align-center vertical padded-2">
 					<label>User Name of who you want to share it to.</label>
 					<input type='text' name="username" placeholder="Username" required="true">
 					<div class="buttons">
