Add support to load local images

--- a/app/index.html
+++ b/app/index.html
@@ -162,6 +162,8 @@
 
 			<div data-modal="insert-image" data-insert-element="Image">
 				<form data-form="insert-image" class="vertical align-center padded-1">
+					<label>Load local Image:</label>
+					<button data-action='local-image' class="button">Select Image</button>
 					<label>Image URL:</label>
 					<input type="text" placeholder="www.example.com/image.png">
 					<div class="buttons">
