Add error reporting to share

--- a/app/index.html
+++ b/app/index.html
@@ -272,6 +272,7 @@
 				<form data-form="share" class="align-center vertical padded-2">
 					<label>User Name of who you want to share it to.</label>
 					<input type='text' name="username" placeholder="Username" required="true">
+					<span data-content="status"></span>
 					<div class="buttons">
 						<button type="submit">Share</button>
 						<button type="reset">Cancel</button>
