Move export functionality to it's own file

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
 		<script src="js/settings.js"></script>
 		<script src="js/editor.js"></script>
 		<script src="js/preview.js"></script>
+		<script src="js/export-note.js"></script>
 		<script src="js/share.js"></script>
 	</head>
 	<body class="light">
