Load the images to base64

--- a/app/index.html
+++ b/app/index.html
@@ -432,7 +432,8 @@
 					</div>
 					<div class="vertical align-center">
 						<h2>Backup</h2>
-						<button data-action="import-backup">Import Backup</button>
+						<p>Restoring from a backup will delete all your notes and notebooks and replace them with the backup content.</p>
+						<button data-action="import-backup">Restore from Backup</button>
 						<button data-action="create-backup">Create Backup</button>
 					</div>
 					<div class="buttons">
