--- a/app/index.html
+++ b/app/index.html
@@ -424,6 +424,15 @@
 
 				<form method="post" data-form="settings" class="vertical align-center padded-2">
 					<div class="vertical align-center">
+						<h2>Image quality</h2>
+						<p>Select the image quality for compression (currently only for PNG):</p>
+						<select data-input='imageCompression'>
+							<option value="good">Good</option>
+							<option value="better">Better</option>
+							<option value="best">Best</option>
+						</select>
+					</div>
+					<div class="vertical align-center">
 						<h2>Theme</h2>
 						<select data-action='change-theme'>
 							<option value="light">Light</option>
