Add option to change notes sorting

--- a/app/index.html
+++ b/app/index.html
@@ -424,6 +424,13 @@
 
 				<form method="post" data-form="settings" class="vertical align-center padded-2">
 					<div class="vertical align-center">
+						<h2>Notes Sort Order</h2>
+						<select data-action='change-sort'>
+							<option value="older">Older First</option>
+							<option value="newer">Newer First</option>
+						</select>
+					</div>
+					<div class="vertical align-center">
 						<h2>Image quality</h2>
 						<p>Select the image quality for compression (currently only for PNG):</p>
 						<select data-input='imageCompression'>
