Change sorting title

--- a/app/index.html
+++ b/app/index.html
@@ -424,7 +424,7 @@
 
 				<form method="post" data-form="settings" class="vertical align-center padded-2">
 					<div class="vertical align-center">
-						<h2>Notes Sort Order</h2>
+						<h2>Notes Sorting Order</h2>
 						<select data-action='change-sort'>
 							<option value="older">Older First</option>
 							<option value="newer">Newer First</option>
