Add keyboard events support

--- a/app/index.html
+++ b/app/index.html
@@ -26,12 +26,14 @@
 
 		<!-- Import Third Party Scripts that can't be loaded via require -->
 		<script src="js/prism.js"></script>
+		<script src="node_modules/keyboardjs/dist/keyboard.min.js"></script>
 		<script src="node_modules/mathjax/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
 		<!-- Import Core Scripts -->
 		<script src="js/artemis.js"></script>
 		<script src="js/conf.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/keyboard-events.js"></script>
 		<script src="js/login.js"></script>
 		<script src="js/key.js"></script>
 		<script src="js/offline-key.js"></script>
