Add PDF export target

--- a/app/index.html
+++ b/app/index.html
@@ -437,6 +437,7 @@
 					<button data-action="export-skrifa">Chrome Skrifa Note</button>
 					<button data-action="export-md">Markdown</button>
 					<button data-action="export-html">HTML</button>
+					<button data-action="export-pdf">PDF</button>
 					<div class="buttons">
 						<button type="reset">Cancel</button>
 					</div>
