--- a/app/index.html
+++ b/app/index.html
@@ -495,11 +495,25 @@
 		<section data-view="settings">
 			<div data-modal="migrate-backup">
 				<form data-form="migrate-backup" class="vertical align-center padded-1">
-					<h2>You will now have to choose the new key you'll be migrating to. Please enter your passphrase to continue.</h2>
+					<h2>Migration Background</h2>
+					<p>Please enter your passphrase to continue. You will now have to choose the new key you'll be migrating to and then the location you want to save your backup to.</p>
 					<input type="password" name="passphrase" required="true" placeholder="Passphrase">
 					<span class="status"></span>
 					<div class="buttons">
 						<button type="submit">Migrate</button>
+						<button type="reset">Cancel</button>
+					</div>
+				</form>
+			</div>
+
+			<div data-modal="clear-data">
+				<form data-form="clear-data" class="vertical align-center padded-1">
+					<h2>Clear Data</h2>
+					<p>Please enter your passphrase to continue. Remember this action is definitive, use with precaution!</p>
+					<input type="password" name="passphrase" required="true" placeholder="Passphrase">
+					<span class="status"></span>
+					<div class="buttons">
+						<button type="submit">Clear</button>
 						<button type="reset">Cancel</button>
 					</div>
 				</form>
@@ -540,17 +554,26 @@
 					<div class="vertical align-center">
 						<h2>Backup</h2>
 						<p>Restoring from a backup will delete all your notes and notebooks and replace them with the backup content.</p>
-						<p>Migration Backup will generate a backup file that will allow you to migrate all your notes in case you want to change your key pair.</p>
 						<div>
 							<button data-action="import-backup">Restore from Backup</button>
 							<button data-action="create-backup">Create Backup</button>
-							<button data-action="migrate-backup">Migration Backup</button>
+
 						</div>
 					</div>
 					<div class="vertical align-center">
-						<h2>Manage Keys</h2>
+						<h2>Key Management</h2>
+						<p>Migration Backup will generate a backup file that will allow you to migrate all your notes in case you want to change your key pair.</p>
 						<div>
 							<button data-action="export-public-key">Export Public Key</button>
+							<button data-action="migrate-backup">Migration Backup</button>
+						</div>
+					</div>
+
+					<div class="vertical align-center">
+						<h2>App Management</h2>
+						<p>Clearing your storage will delete all your notes, notebooks and information from the app, please use with extreme precaution</p>
+						<div>
+							<button data-action="clear-data">Clear Storage</button>
 						</div>
 					</div>
 
