Remove edition responsive menu and advanced PGP option

--- a/app/index.html
+++ b/app/index.html
@@ -250,9 +250,6 @@
 				</form>
 			</div>
 
-
-
-			<span class="menu-icon fa fa-bars" data-menu="editor"></span>
 			<div class="side-nav unselectable">
 	            <div class="editor-tools">
 	                <div>
@@ -339,7 +336,7 @@
 							<p>Share as:</p>
 							<div class="horizontal">
 								<button data-action="pgp-skrifa">Skrifa Note</button>
-								<button data-action="pgp-plain">Plain Text</button>
+								<!--<button data-action="pgp-plain">Plain Text</button>-->
 							</div>
 						</div>
 						<div class="col s12 vertical">
